--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,4 +1,4 @@
-{{ define "main" }}
+{{ define "content" }}
   <h1>We’ve crossed into a different dimension...</h1>
   <p>Time is relative, but this page is absolutely lost.</p>
   <p>
